--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nguyentannghi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/NguyenTanNghi/ReactNative/issues"
   },
-  "homepage": "https://github.com/NguyenTanNghi/ReactNative#readme"
+  "homepage": "https://github.com/NguyenTanNghi/ReactNative#readme",
+  "description": ""
 }
